--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -22,6 +22,13 @@
         <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef> Edit </th>
+        <td mat-cell *matCellDef="let element"> <button olor="primary" mat-raised-button
+            (click)="openDialog(element.position, element.name)">Edit</button>
+        </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
